# astropic

./: Pipfile  README.md  getobjectinfo.py  main.py  pic_processing.py  pyproject.toml
.github/workflows/: python-publish.yml
astropic/: fits2png.py
src/astro_pics/: __init__.py  main.py
