[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
[project]
name = "astro_pics"
version = "1.1.0"
authors = [
  { name="Aromik", email="mr.aromik@gmail.com" },
]
description = "Project for editing images of astronomical objects"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/Aromik/image_modify_astro"
"Bug Tracker" = "https://github.com/Aromik/image_modify_astro/issues"