[tool.poetry]
name = "astropic"
version = "1.1.5"
description = "Tool for editing astronomical object pictures"
authors = ["Aromik"]
license = "MIT"
readme = "README.md"
packages = [{include = "astropic"}]
homepage = "https://github.com/Aromik/image_modify_astro"
repository = "https://github.com/Aromik/image_modify_astro"
keywords = ["astropy", "redshift", "astropic"]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.7"
astropy = "^5.2.1"
requests = "^2.28.2"
pyquery = "^2.0.0"
Pillow = "^9.4.0"
matplotlib = "^3.6.3"
numpy = "^1.24.2"
scipy = "^1.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
